add_library(CEF STATIC dummy.cpp)
if(CMAKE_CL_64)
    target_link_directories(CEF PUBLIC "lib/win_64")
elseif(WIN32)
    target_link_directories(CEF PUBLIC "lib/win_32")
elseif(APPLE)
    target_link_directories(CEF PUBLIC "lib/darwin_x64")
else()
    target_link_directories(CEF PUBLIC "lib/linux")
endif()
target_link_libraries(CEF PUBLIC libcef libcef_dll_wrapper)
target_include_directories(CEF PUBLIC "include")
