add_library(CefTarget INTERFACE)

if (WIN32)
    set(CEF_PLATFORM "windows32")
    target_link_directories(CefTarget INTERFACE "../cef/lib/win_32" "../cef/libcef_dll_wrapper")
    file(GLOB CEF_LIBS "../cef/lib/win_32/*.lib" "../cef/libcef_dll_wrapper/*.lib")
elseif (APPLE)
    set(CEF_PLATFORM "macosx64")
    target_link_directories(CefTarget INTERFACE "../cef/lib/osx" "../cef/libcef_dll_wrapper")
    file(GLOB CEF_LIBS "../cef/lib/osx/*.a" "../cef/lib/osx/*.framework" "../cef/libcef_dll_wrapper/*.a")
elseif (UNIX)
    set(CEF_PLATFORM "linux32")
    target_link_directories(CefTarget INTERFACE "../cef/lib/linux_32" "../cef/libcef_dll_wrapper")
    file(GLOB CEF_LIBS "../cef/lib/linux_32/*.a" "../cef/libcef_dll_wrapper/*.a")
endif ()

target_include_directories(CefTarget INTERFACE "../cef/include")
target_link_libraries(CefTarget INTERFACE ${CEF_LIBS})
