add_library(Firebase INTERFACE)
set(FIREBASE_LIBS firebase_analytics firebase_auth firebase_app firebase_functions)
if (CMAKE_CL_64)
    target_link_directories(Firebase INTERFACE "lib/win_64/Release")
elseif (WIN32)
    target_link_directories(Firebase INTERFACE "lib/win_32/Release")
elseif (APPLE)
    target_link_directories(Firebase INTERFACE "lib/osx")
else ()
    target_link_directories(Firebase INTERFACE "lib/linux_64")
endif ()

target_link_libraries(Firebase INTERFACE ${FIREBASE_LIBS})
target_include_directories(Firebase INTERFACE "include")
